kbs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecomm          # matches deployment name in kubectl command
  labels:
    app: ecomm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecomm
  template:
    metadata:
      labels:
        app: ecomm
    spec:
      containers:
        - name: ecomm    # This must match the container name in kubectl command
          image: bodukal/ecomm:latest
          ports:
            - containerPort: 8080
