kbs/ecomm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecomm-service
  namespace: default  # Change if your app is in different namespace
  labels:
    app: ecomm
spec:
  selector:
    app: ecomm
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
